# rag-evaluation

./: 01_baca_data_awal.py  01b_fill_context_qdrant.py  02_data_evaluation.csv  02_data_evaluation_100_context.csv  02_rename_columns.py  03_generate_answers.py  03_with_answers.csv  03_with_answers_100.csv  03_with_answers_smoke1.csv  03b_merge_context.py  04_eval.py  04_evaluated.csv  04_evaluated_100.csv  04_evaluated_100_answer_relevancy_sample.csv  04_evaluated_real.csv  04_evaluated_real_ready.csv  04_no_ground_truth.csv  05_evaluated_100_ready.xlsx  05_evaluated_clean.xlsx  05_evaluated_real_ready.xlsx  05_export_clean_eval.py  PIPELINE.md  README.md  anjay.json  app.py  check_empty_gt.py  data_awal.xlsx  data_awal_with_context.csv  pyproject.toml  ragas_rag_evaluation.ipynb  sumber.json
